extra blocks removed

--- a/week_6_section_a.ipynb
+++ b/week_6_section_a.ipynb
@@ -5,8 +5,8 @@
    "id": "9fe4c62813786a5d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-15T18:42:54.134489Z",
-     "start_time": "2025-12-15T18:42:45.640562Z"
+     "end_time": "2026-02-04T17:40:07.858396Z",
+     "start_time": "2026-02-04T17:39:48.103800Z"
     }
    },
    "source": [
@@ -94,29 +94,29 @@
      "text": [
       "\n",
       "=== Completion 1 (cleaned) ===\n",
-      "AI is transforming industries by focusing on new technology.\n",
-      "The new tech will help transform our lives, our economy, and our lives around the world.\n",
-      "I've been a bit of a skeptic, but I was excited to hear about the big tech companies.\n",
-      "In the past few years, I've been learning about the emerging technologies that have made their way into our lives. They're like the Google Glass that's out there, the smart speaker that you hear every day.\n",
+      "AI is transforming industries by treating them with the same care as the rest of the population.\n",
+      "In my book, I've discussed how we can increase productivity by using technology to change the way we live and work.  It's time to get back to that.  I have some interesting ideas for you.\n",
+      "In the beginning, I used to think that we should focus on technology.  I thought we needed to focus on the people and how they interacted with technology.\n",
       "\n",
       "=== Completion 2 (cleaned) ===\n",
-      "AI is transforming industries by making sure they have a better supply chain, and more efficient and cost-effective ways to sell products, and by making sure they are environmentally sound.\n",
-      "I've been involved in a lot of things for the past ten years, and I am very happy with the way things are moving forward. I'm a big fan of the new products that are being made here, and I think that the industry is very well positioned to do well in this new environment.\n",
+      "AI is transforming industries by vernacularizing and reinventing the way we think and act.\n",
+      "\n",
+      "In this year's edition of the American Economic Review, I'll talk about the latest in the \"Big Five\" research on the value of innovation. It's a fascinating look at how those big five groups are shaping the way we think, act and live.\n",
       "\n",
       "=== Completion 3 (cleaned) ===\n",
-      "AI is transforming industries by developing new technologies that can revolutionize the way we think about what it means to be a human being.\n"
+      "AI is transforming industries by creating new jobs and creating new revenue streams, while also bringing about a return to a world of \"zero-sum\" conflicts.\n"
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "id": "a8677957d73c335f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-15T18:43:04.206945Z",
-     "start_time": "2025-12-15T18:43:04.194143Z"
+     "end_time": "2026-02-04T17:40:17.595570Z",
+     "start_time": "2026-02-04T17:40:17.578335Z"
     }
    },
    "source": [
@@ -147,7 +147,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 2
   }
  ],
  "metadata": {
