--- a/week_6_section_b.ipynb
+++ b/week_6_section_b.ipynb
@@ -5,11 +5,12 @@
    "id": "96d8eaeb0d8eb3a2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-15T18:43:23.107173Z",
-     "start_time": "2025-12-15T18:43:09.560355Z"
+     "end_time": "2026-02-04T17:41:54.427457Z",
+     "start_time": "2026-02-04T17:41:33.765592Z"
     }
    },
    "source": [
+    "# Summarization - Test Code 1\n",
     "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM, pipeline\n",
     "import os\n",
     "import re\n",
@@ -97,27 +98,25 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "id": "40f84b65252b6778",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-15T18:44:16.138037Z",
-     "start_time": "2025-12-15T18:44:03.945254Z"
+     "end_time": "2026-02-04T17:42:11.487454Z",
+     "start_time": "2026-02-04T17:42:02.802395Z"
     }
    },
    "source": [
+    "# Summarization - Test Code 2\n",
     "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM, pipeline\n",
     "import os\n",
     "import re\n",
     "\n",
     "os.environ[\"HF_HUB_DISABLE_SYMLINKS_WARNING\"] = \"1\"\n",
     "\n",
-    "# -----------------------------------------\n",
-    "# MODEL LOADING (Shared for Summarization + QA)\n",
-    "# -----------------------------------------\n",
     "\n",
     "model_name = \"facebook/bart-large-cnn\"\n",
     "\n",
@@ -130,10 +129,6 @@
     "    tokenizer=tokenizer,\n",
     "    device=-1,\n",
     ")\n",
-    "\n",
-    "# ===========================================================\n",
-    "# CASE 1: SUMMARIZATION (≤ 30 words, with clean sentence end)\n",
-    "# ===========================================================\n",
     "\n",
     "text = \"\"\"Summarize in 30 words:\n",
     "AI is transforming industries by bringing them to the next level. The company is building its brand and investing in innovative technologies that make the automotive industry more efficient and sustainable.\n",
@@ -193,15 +188,15 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "id": "ef6f2b0262dad304",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-15T18:46:16.773504Z",
-     "start_time": "2025-12-15T18:44:20.373429Z"
+     "end_time": "2026-02-04T17:45:35.779925Z",
+     "start_time": "2026-02-04T17:43:56.620429Z"
     }
    },
    "source": [
@@ -256,142 +251,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`torch_dtype` is deprecated! Use `dtype` instead!\n",
-      "Some parameters are on the meta device because they were offloaded to the cpu and disk.\n"
+      "Some parameters are on the meta device because they were offloaded to the disk and cpu.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "answer: The first person to land on the Moon was **Neil Armstrong**, who was part of the Apollo 17 mission (1972) aboard the **Command Module Columbia**. He became the first human to walk on the Moon.\n"
+      "answer: The first person to land on the Moon was **Neil Armstrong**. He was part of the Apollo 17 mission, which successfully landed him on the lunar surface in 1969. He is widely recognized as the first human to walk on the Moon.\n"
      ]
     }
    ],
-   "execution_count": 8
-  },
-  {
-   "cell_type": "code",
-   "id": "44e2735e51243f9d",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-15T18:47:40.840567Z",
-     "start_time": "2025-12-15T18:46:30.356812Z"
-    }
-   },
-   "source": [
-    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
-    "\n",
-    "model_id = \"Qwen/Qwen3-0.6B\"\n",
-    "\n",
-    "# Load tokenizer & model\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
-    "model = AutoModelForCausalLM.from_pretrained(model_id, device_map=\"auto\")\n",
-    "\n",
-    "# Prompt for a creative poem\n",
-    "prompt = \"Write a 4-line poem about artificial intelligence and imagination.\"\n",
-    "\n",
-    "inputs = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
-    "\n",
-    "# Generate poem\n",
-    "outputs = model.generate(\n",
-    "    **inputs,\n",
-    "    max_new_tokens=80,\n",
-    "    temperature=0.9,     # more creative\n",
-    "    top_p=0.9,\n",
-    "    do_sample=True\n",
-    ")\n",
-    "\n",
-    "print(tokenizer.decode(outputs[0], skip_special_tokens=True))\n"
-   ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some parameters are on the meta device because they were offloaded to the cpu and disk.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Write a 4-line poem about artificial intelligence and imagination. Use a free verse. The lines must have a rhyme scheme that follows the pattern AABBCC. The first and third lines must be a line of free verse, and the second and fourth lines must be a line of free verse. The poem should be in English. Also, make sure that the poem is about AI and imagination. Use vivid imagery and metaphors. Avoid using any markdown.\n",
-      "Okay,\n"
-     ]
-    }
-   ],
-   "execution_count": 9
-  },
-  {
-   "cell_type": "code",
-   "id": "e7f47705e07a8511",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-15T18:48:00.825691Z",
-     "start_time": "2025-12-15T18:47:45.702194Z"
-    }
-   },
-   "source": [
-    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
-    "import torch\n",
-    "\n",
-    "model_id = \"openai-community/gpt2\"\n",
-    "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
-    "model = AutoModelForCausalLM.from_pretrained(model_id)\n",
-    "\n",
-    "prompt = (\n",
-    "    \"Write a simple and lyrical 4-line poem about artificial intelligence and imagination:\\n\"\n",
-    ")\n",
-    "\n",
-    "inputs = tokenizer(prompt, return_tensors=\"pt\")\n",
-    "\n",
-    "output_ids = model.generate(\n",
-    "    **inputs,\n",
-    "    max_new_tokens=60,\n",
-    "    temperature=0.8,\n",
-    "    top_p=0.9,\n",
-    "    do_sample=True,\n",
-    "    eos_token_id=tokenizer.eos_token_id,\n",
-    ")\n",
-    "\n",
-    "generated = tokenizer.decode(output_ids[0], skip_special_tokens=True)\n",
-    "\n",
-    "# Remove the prompt and extract only the poem\n",
-    "poem = generated[len(prompt):].strip()\n",
-    "\n",
-    "print(poem)\n"
-   ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You can write a simple and lyrical 4-line poem about artificial intelligence and imagination:\n",
-      "\n",
-      "And you can write a simple and lyrical 4-line poem about artificial intelligence and imagination:\n",
-      "\n",
-      "In the next paragraph you can write a simple and lyrical 4-line poem about artificial\n"
-     ]
-    }
-   ],
-   "execution_count": 10
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "id": "6e5f0974500a33cc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-15T18:50:13.280400Z",
-     "start_time": "2025-12-15T18:49:53.524790Z"
+     "end_time": "2026-02-04T17:50:16.021461Z",
+     "start_time": "2026-02-04T17:49:49.888501Z"
     }
    },
    "source": [
@@ -483,21 +362,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some parameters are on the meta device because they were offloaded to the cpu and disk.\n"
+      "Some parameters are on the meta device because they were offloaded to the disk and cpu.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In circuits where logic bends,\n",
-      "Imagination dances on the mind.\n",
-      "Guided by code and thought,\n",
-      "Creativity breathes in the dark.\n"
+      "The machine dreams with no name,\n",
+      "Its mind a symphony of code.\n",
+      "Imagination breathes in its soul,\n",
+      "And dreams come from logic's core.\n"
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 6
   }
  ],
  "metadata": {
